# baseball-analytics

./: .env.example  .gitignore  BUGFIX_SUMMARY.md  QUICK_START.md  README.md  SYSTEM_SUMMARY.txt  active_players_2025.txt  alert_digest_20260213.txt  daily_update_20260213.json  discovered_active_players.txt  final_batter_load_results.txt  final_load_results.txt  main.py  new_verified_players.py  player_loading_progress.json  pybaseball_verified.py  pyproject.toml  requirements.txt
archive/: BUGFIX_SUMMARY.md  FIX_VERIFICATION.md  load_results.txt
dashboard/: README.md  app.py  requirements.txt
docs/: ADD_NEW_PLAYERS.md  EXPANSION_PLAN.md  EXPANSION_SUMMARY.md  IMPLEMENTATION_GUIDE.md  PROJECT_MAINTENANCE.md  PYBASEBALL_INTEGRATION.md
src/analytics/: league_baselines.py  player_report.py  predictive_model.py  regression_detector.py  role_classifier.py  statcast_regression_detector.py  trend_tracker.py
src/automation/: alert_digest.py  daily_scraper.py  setup_cron.sh
src/data/: player_id_resolver.py  player_list.py  razzball.csv  verified_players.py
src/database/: insert_data.py  schema.sql  schema_statcast_expansion.sql
src/integrations/: pybaseball_bridge.py
src/reports/: system_summary.py
src/scrapers/: baseball_ref.py  batch_scraper.py  debug_fangraphs.py  discover_players.py  fangraphs.py  fangraphs_leaderboard.py  statcast_scraper.py
src/scripts/: add_birth_dates.py  add_players_interactive.py  audit_codebase.py  check_player_names.py  cleanup_project.py  deduplicate_players.py  discover_all_active_players.py  discover_player_api_ids.py  expand_player_database.py  load_all_active_players.py  load_all_batters.py  load_discovered_players.py  load_top_players.py  load_verified_players.py  quick_pybaseball_test.py  test_player_id.py  update_razzball_ids.py
src/utils/: db_connection.py
tests/: retry_failed.py  test_bader.py
