[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball-analytics"
version = "0.1.0"
description = "A comprehensive MLB player analytics platform with regression detection, performance predictions, and automated insights"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Baseball Analytics Team"}
]
keywords = ["baseball", "mlb", "analytics", "statistics", "predictions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Database
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.23,<3.0",

    # Data processing - Updated for Python 3.13 compatibility
    "numpy>=1.26.0,<3.0",
    "pandas>=2.2.0,<3.0",

    # Web scraping
    "requests>=2.31.0,<3.0",
    "beautifulsoup4>=4.12.2,<5.0",
    "lxml>=5.1.0,<6.0",
    "playwright>=1.40.0,<2.0",

    # Baseball data
    "pybaseball>=2.2.7",

    # Configuration
    "python-dotenv>=1.0.0,<2.0",

    # Dashboard
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"
